# gitlab-runner-tui

./: .dockerignore  .env  .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  app_spec.txt  release-please-config.json
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/skills/: rust-besty.md
.github/workflows/: ci.yml  docker-publish.yml  release-please.yml  release.yml
src/: config.rs  main.rs
src/client/: mod.rs
src/conductor/: mod.rs
src/models/: manager.rs  mod.rs  runner.rs  user.rs
src/tui/: app.rs  event.rs  ui.rs
src/utils/: mod.rs
