[package]
name = "gitlab-runner-tui"
version = "0.1.5"
edition = "2021"
description = "A terminal UI for monitoring GitLab CI runners"
license = "MIT"
repository = "https://github.com/damacus/gitlab-runner-tui"
homepage = "https://github.com/damacus/gitlab-runner-tui"
keywords = ["gitlab", "ci", "tui", "runner", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# TUI
ratatui = "0.27"
crossterm = { version = "0.27", features = ["event-stream"] }

# Async & HTTP
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = [
	"json",
	"rustls-tls-native-roots",
], default-features = false }
futures = "0.3"
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"

# CLI & Config
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
toml = "0.8"
dirs = "5.0"

# Utility
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.4"

[dev-dependencies]
mockito = "1.3"
